--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@react-navigation/stack": "^6.4.1",
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
+    "axios": "^1.7.7",
     "react": "18.3.1",
     "react-native": "0.75.4",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.27.0",
